--- a/app/pom.xml
+++ b/app/pom.xml
@@ -83,6 +83,24 @@
             <version>5.4.31.Final</version>
         </dependency>
 
+        <dependency> 
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>3.4.5</version>
+		</dependency>
+
+        <dependency> 
+			<groupId>org.assertj</groupId> 
+			<artifactId>assertj-core</artifactId>
+			<version>3.11.1</version>
+			<scope>test</scope> 
+		</dependency>
+
     </dependencies>
 
     <build>
